[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/chemical_cabinet_ui.gd" type="Script" id=1]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/cabinet-ui-door-closed.png" type="Texture" id=2]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/cabinet-ui-cabinet.png" type="Texture" id=3]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/cabinet-ui-door-opened.png" type="Texture" id=4]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/cabinet-ui-door-handle.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
height = 92.0

[sub_resource type="CapsuleShape2D" id=2]
height = 92.0

[node name="ChemicalCabinet" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
focus_mode = 2
mouse_filter = 2
window_title = "Pick up the chemicals you need!"
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0

[node name="Cabinet" type="Sprite" parent="Control"]
texture = ExtResource( 3 )

[node name="DoorOpened" type="Sprite" parent="Control"]
visible = false
texture = ExtResource( 4 )

[node name="DoorClosed" type="Sprite" parent="Control"]
texture = ExtResource( 2 )

[node name="HandleLeft" type="Area2D" parent="Control/DoorClosed"]
position = Vector2( -34.5, -50 )
collision_layer = 512
collision_mask = 512
gravity_vec = Vector2( 1, 1 )

[node name="HandleLeft" type="Sprite" parent="Control/DoorClosed/HandleLeft"]
position = Vector2( 0, 50 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/DoorClosed/HandleLeft"]
position = Vector2( 0, 50 )
shape = SubResource( 1 )

[node name="HandleRight" type="Area2D" parent="Control/DoorClosed"]
position = Vector2( 31.5, -50 )
collision_layer = 512
collision_mask = 512

[node name="HandleRight" type="Sprite" parent="Control/DoorClosed/HandleRight"]
position = Vector2( 0, 50 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/DoorClosed/HandleRight"]
position = Vector2( 0, 50 )
shape = SubResource( 2 )

[connection signal="hide" from="." to="." method="_on_ChemicalCabinet_hide"]
[connection signal="popup_hide" from="." to="." method="_on_ChemicalCabinet_popup_hide"]
[connection signal="input_event" from="Control/DoorClosed/HandleLeft" to="." method="_on_HandleLeft_input_event"]
[connection signal="mouse_entered" from="Control/DoorClosed/HandleLeft" to="." method="_on_HandleLeft_mouse_entered"]
[connection signal="mouse_exited" from="Control/DoorClosed/HandleLeft" to="." method="_on_HandleLeft_mouse_exited"]
[connection signal="input_event" from="Control/DoorClosed/HandleRight" to="." method="_on_HandleRight_input_event"]
[connection signal="mouse_entered" from="Control/DoorClosed/HandleRight" to="." method="_on_HandleRight_mouse_entered"]
[connection signal="mouse_exited" from="Control/DoorClosed/HandleRight" to="." method="_on_HandleRight_mouse_exited"]
